@@ -1,1 +1,1 @@
-#define UTS_RELEASE "2.6.32.9-Kosi004-HP_RC12SR1R-powered-gf11e944"
+#define UTS_RELEASE "2.6.32.9-Kosi005-HP_RC12SR1R-powered-g3f99236-dirty"
